--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -54,7 +54,7 @@ header {
   text-shadow: 5px 10px 10px rgb(41, 44, 28);
 }
 section {
-  padding: 5px; /* espaciado para la sección pixeles */
+  padding: 20px; /* espaciado para la sección de 20 pixeles */
   color: rgb(252, 250, 250);
   font-weight: bold;
   text-shadow: 0px 1px 2px #131212;
@@ -120,6 +120,9 @@ form {
   max-width: 300px;
   /* Ajusta el tamaño según tus necesidades */
   margin: 0 auto;
+  /* Centra el carrusel */
+  padding: 20px 0;
+  /* Espacio alrededor del carrusel */
 }
 h2 {
   text-align: center;
@@ -201,9 +204,9 @@ h4 {
 }
 
 .carousel-container {
-  max-width: 600px; /* Ajusta el tamaño según tus necesidades */
+  max-width: 800px; /* Ajusta el tamaño según tus necesidades */
   margin: 0 auto; /* Centra el carrusel */
-  padding: 0px 0; /* Espacio alrededor del carrusel */
+  padding: 20px 0; /* Espacio alrededor del carrusel */
   justify-content: center;
 }
 
